@startuml

package filesystem {

abstract Item {
    - String name
    - Date creationTime
    - Date modificationTime
    - Directory parentDirectory
__
    + Item(String name)
..
    + void changeName(String name)
    + boolean isDeletable()
    + void delete() (destructor)
    + boolean hasOverlappingUsagePeriod(Item other)
    + void move(Directory dir)
    + Directory getRoot()
    + boolean isDirectOrIndirectChildOf(Directory dir)
    + int getTotalDiskUsage()
    + String getAbsolutePath()
    + void deleteRecursive()
..Getters & setters..
    + String getName()
    - void setName(String name)
    - {static} String getDefaultName()
    + Date getCreationTime()
    + Date getModificationTime()
    - void setModificationTime()
..Checkers..
    + {static} boolean isValidCreationTime(Date date)
    + boolean isValidName(String name)
    + boolean canHaveAsModificationTime(Date date)
    + boolean canHaveAsParentDirectory(Directory dir)
    + boolean hasProperParentDirectory()
}

class File {
    - int size
    - {static} int maximumSize
    - final Filetype type
    - boolean writable
__
    + File(Directory dir, String name, float size, boolean writable, Filetype type)
    + File(Directory dir, String name, Filetype type)
..
    + void enlarge(int delta)
    + void shorten(int delta)
    - void changeSize(int delta)
..Getters & setters..
    + int getSize()
    - void setSize(int size)
    + int getMaximumSize()
    + Filetype getFiletype()
    + Sting getName()
    - void setName(String name)
    + void setWritable()
    + boolean isWritable()
..Checkers..
    + {static} boolean isValidSize(int size)
    + {static} boolean canHaveAsFiletype(Filetype type)
..Overrides..
    + boolean isDeletable()
    + void delete() (destructor)
    + int getTotalDiskUsage()
    + String getAbsolutePath()
}

enum Filetype {
    TEXT("txt"),
    PDF("pdf"),
    JAVA("java")
}

class Directory {
    - ArrayList<Item> items
    - boolean writable
__
    + Directory(Directory dir, String name, boolean writable)
    + Directory(Directory dir, String name)
    + Directory(String name, boolean writable)
    + Directory(String name)
__
    + void addItem(Item item)
    + int getNbItems()
    + Item getItemAt(int index)
    + Item getItem(String name)
    + boolean containsDiskItemWithName(String name)
    + int getIndexOf(Item item)
    + boolean hasAsItem(Item item)
    + void makeRoot()
    - int getIndexForItem(Item item)
    - void insertItemAtIndex(int index, Item item)
    + void setWritable()
    + boolean isWritable()
    + void deleteRecursive()
    # void deleteItem(Item item)
..Checkers..
    + {static} boolean isValidItem(Item item)
    + boolean hasProperItems()
    + boolean isRecursivelyDeletable()
.. Overrides ..
    + boolean isValidName(String name)
    + boolean isDeletable()
    + void delete() (destructor)
    + int getTotalDiskUsage()
    + boolean canHaveAsParentDirectory(Directory dir)
}

class Link {
    - Item linkedItem (not another link)
__
    + Link(Directory dir, String name, Item linkedItem)
..
    - void changeLinkTo(Link link)
    + void unlink()
..Checkers..
    + {static} boolean isValidLinkedItem(Item item)
    + boolean hasProperLinkedItem()
..Overrides..
    + void delete() (destructor)
    + int getTotalDiskUsage()
}

Item <|-- Link: inherits from
Item <|-- File: inherits from
Item <|-- Directory: inherits from

File .. Filetype: uses

Link --> File: references
Link "*" -- "1" Directory
File "*" -- "1" Directory

}

@enduml
